--- a/Space Game/Space Game.csproj
+++ b/Space Game/Space Game.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RaiderAttack.cs" />
     <Compile Include="RiskyRaiderAttack.cs" />
+    <Compile Include="ShipOne.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
