--- a/Space Game/Space Game.csproj
+++ b/Space Game/Space Game.csproj
@@ -47,10 +47,12 @@
     <Compile Include="PlanetAlphaCenturian3.cs" />
     <Compile Include="PlanetEarth.cs" />
     <Compile Include="PlanetLayout.cs" />
+    <Compile Include="PlanetObicromPersei8.cs" />
     <Compile Include="PlanetProximaB.cs" />
     <Compile Include="PlanetTitanAE.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RaiderAttack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
