--- a/Space Game/Space Game.csproj
+++ b/Space Game/Space Game.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RaiderAttack.cs" />
+    <Compile Include="RiskyRaiderAttack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
