--- a/Space Game/Space Game.csproj
+++ b/Space Game/Space Game.csproj
@@ -47,6 +47,7 @@
     <Compile Include="GalaxyClass.cs" />
     <Compile Include="GamePlayClass.cs" />
     <Compile Include="Planets.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RaidersAttack.cs" />
