Player class developed to include player and ship choices

--- a/Space Game/Space Game.csproj
+++ b/Space Game/Space Game.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
     <Compile Include="GalaxyClass.cs" />
     <Compile Include="GamePlayClass.cs" />
     <Compile Include="Planets.cs" />
